--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -119,9 +119,6 @@ Ved omskrivning af ligning \ref{eq:rltimeconstant} kan induktansen altså bestem
 	\label{eq:induktans0} 
  \end{equation}
 \paragraph{Metode 2}
-<<<<<<< HEAD
-...
-=======
 Forhindres motoren i at rotere, vil vinkelhastigheden som beskrevet i afsnit \ref{ss:eksperiment1} være nul.
 Ved denne metode er vi interesseret i systemets steady-state respons.
 Forbindes en modstand $R_{s1}$ i serie med DC-motoren som vist på fig. %ref{fig:e2_rl2}
@@ -169,7 +166,6 @@ Effektafsættelsen $P_{avg}$ i en modstand R, påført en vekselspænding med am
 	P_{avg}=\frac{\left(\frac{V}{\sqrt{2}}\right)^2}{R}
 	\label{eq:effekt}
  \end{equation}
->>>>>>> c5104452880841685edf700bce33975684c0beea
 \subsubsection{Fremgangsmåde}
 \paragraph{Metode 1}
 En modstand $R_s$ måles efter med et multimeter og fobindes i serie med DC-motoren
@@ -201,10 +197,12 @@ sammen med de to spændingsniveauer, hvorudfra tidskonstanten bestemmes.
 \begin{figure}[th!]
 	\centering
 	\includegraphics[width=1\textwidth]{./graphics/induktans0.eps}
-	\caption[...]{...}
+	\caption[Transientrespons for låst motor]
+		{Transientrespons for låst motor. De to vandrette røde linjer angiver spændingsniveauerne til bestemmelse af tidskonstanten.
+		Den øverste linje er ved 4 V, mens den nederste linje er ved 4 V $\cdot \frac{1}{e}$.}
 	\label{fig:induktans0}
 \end{figure}
-
+Figur \ref{fig:induktans0} viser flere målingers transientrespons.
 \paragraph{Metode 2}
 Seriemodstanden $R_s1$ er blevet målt til 473,3 $\Omega$.
 Spændingen har en amplitude på 2,4 V og et DC-offset på 2,5 V.
@@ -218,8 +216,6 @@ På figur \ref{fig:induktans1} er steady-state responsen for spændingsfaldene o
 	\label{fig:induktans1}
 \end{figure}
 \subsubsection{Databehandling}
-<<<<<<< HEAD
-=======
 \paragraph{Metode 1}
 For hver måling af transientresponsen, vist i figur \ref{fig:induktans0} er induktansen blevet
 bestemt ved brug af ligning \ref{eq:induktans0}.
@@ -232,7 +228,6 @@ og vha. ligningerne \ref{eq:Rm_0} og \ref{eq:Lm_0} er resistansen hhv. induktans
 179,94 $\Omega$ hhv. 3,047 mH.
 Effektafsættelsen i motoren er med amplitudeforskellen på $\mathbf{V_1}$ og $\mathbf{V_2}$ samt
 de i forsøget fundne værdier $R_{s1}$ og $R_m$ ved brug af ligning \ref{eq:effekt} beregnet til 0,405 mW.
->>>>>>> c5104452880841685edf700bce33975684c0beea
 \subsubsection{Diskussion}
 Den lineære sammenhæng mellem strøm og spænding fundet i afnit \ref{ss:eksperiment1} kan ikke benægtes,
 og for effektafsættelser i motoren på over 48 mW må resistansen kunne antages at være 5,21 $\Omega$ som beregnet.
