Eksperiment 4 diskussion og konklusion.

--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -314,6 +314,7 @@ Alle konstanterne er blevet fundet vha. værdien af $R_m$ fra afsnit \ref{ss:eks
 \subsection{Eksperiment 4}
 \subsubsection{Formål}
 Bestemmelse af rotorens inertimoment $J_m$.
+Bestemmelse af størrelsen på friktionen i motoren.
 \subsubsection{Teori}
 Hvis der ikke løber strøm igennem motoren,
 kan ligning \ref{eq:Vm_transient1} omskrives til ligning \ref{eq:Vm_nocurrent}.
@@ -426,6 +427,11 @@ $\alpha_{op}=49,3 \frac{\text{rad}}{\text{s}}$ og $\alpha_{ned}=-69,1 \frac{\tex
 Med disse værdier er inertimomentet beregnet vha. ligning \ref{eq:Jrotor}, og friktionskraftmomentet vha. ligning \ref{eq:Tf1}.
 De beregnede værdier er hhv. $J_m=8.26\cdot10^{-4} \text{kg}\cdot{\text{m}^2}$ og $\|T_f\|=0.0571$ N m.
 \subsubsection{Diskussion}
+At $V_{EMF}$ aftager lineært fremfor eksponentielt indikerer,
+at den viskøse friktion er lav i forhold til Coulomb-friktionen.
+Den lineære approksimation der i fremgangsmåden benyttes er derfor anvendelig,
+og giver et nøjagtigt billede af den tilstedeværende friktion samt rotorens inertimoment.
 \subsubsection{Konklusion}
-
+Rotorens inertimoment er bestemt til $J_m=8.26\cdot10^{-4} \text{kg}\cdot{\text{m}^2}$.
+Friktionskraftmomentet er bestemt til $\|T_f\|=0.0571$ N m.
 \subsection{Opsummering af DC motorparameter}
