Laves en sektion med forkortelser ex.: ES = English Skeet

--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -18,6 +18,7 @@
 \fancyfoot[CO,RE]{}
 
 %%%%%%%%% RAPPORTENS KAPTILER BEGYNDER!!!
+\include{./content/forkortelser}
 \include{./content/forord}
 \include{./content/indledning}
 \include{./content/problemformulering}
