--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -1,7 +1,7 @@
 \section{Problemformulering}
-Tracking af en lerdue i English Skeet \todo{eventuelt starte med en liste over forkortelser}(ES) vha. PTS. 
-Lerduen er i vores opstilling udskiftet med en bold, men ellers følges reglerne for ES
-\todo[color=yellow! 100]{Henvisning til litteraturliste eller fodnote}. 
+Tracking af en lerdue i English Skeet \todo[inline, author=Anders]{eventuelt starte med en liste over forkortelser}(ES) vha. PTS. 
+Lerduen er i vores opstilling udskiftet med en bold, men ellers følges reglerne for ES.
+\todo[color=yellow! 100, inline, author=Anders]{Henvisning til litteraturliste eller fodnote}
 Bolden bevæger sig i et 3D rum med negligerbar luftmodstand. \\
 
 \begin{figure}[th!]
@@ -13,9 +13,9 @@ Bolden bevæger sig i et 3D rum med negligerbar luftmodstand. \\
 Systemets input er 60 kartesisiske koordinatsæt (x,y,z) per sekund. Hvor disse 
 koordinater stammer fra, er uden for projektafgrænsningen. \\
 
-Systemet dimensioneres til brug ifb \todo{Den forkortelse kender jeg ikke} en konkurrence i ES. En skitse over 
+Systemet dimensioneres til brug ifbm. en konkurrence i ES. En skitse over 
 banen ses på figur \ref{fig:ES}. Det kartesiske koordinatsystem har origo i halvcirklens centrum, 
-som indtegnet \todo{De er så indtegnet forkert.. Flot arbejde, klaphat..} 
+som indtegnet \todo[inline, author=Michael]{De er så indtegnet forkert.. Flot arbejde, klaphat..} 
 nederst på figuren. I ES skal rammes serier af duer/mål der afskydes fra 
 enten ”High House” eller ”Low House”, og med skud fra hver af de otte stationer langs 
 cirkelperiferien. I dette projekt kigges kun på tilfældet hvor der afskydes mål fra ”High-
@@ -35,7 +35,7 @@ polynomium) findes ved at indsætte de kendte punkter. Herunder er parablen vist
 \caption[Lerdue parabel]{Viser parablen af lerduens bane.}
 \label{fig:HH2D_para}
 \end{figure}
-\todo[inline]{Den rigtige funktion skal sættes ind, afventer Michael}
+\todo[inline, author=Anders]{Den rigtige funktion skal sættes ind, afventer Michael}
 
 
 
@@ -56,4 +56,4 @@ PTS placering i punktet B.
 \label{fig:para_in_xy_plane}
 \end{figure}
 
-\todo[inline]{Jeg er gået igang med at tegne den og den kommer in snart.}
+\todo[inline, author=Anders]{Jeg er gået igang med at tegne den og den kommer in snart.}
