Efter råd far Michael, author er tilføjet til todo

--- a/Rapport/content/templates.tex
+++ b/Rapport/content/templates.tex
@@ -18,11 +18,11 @@
 %\citep[Side. ]{reflist}
 
 %%%%%%%%%%%% TODO %%%%%%%%%%%%
-%\todo[inline,color=red! 100]{grammatik}
-%\todo[inline,color=green! 100]{hjælp, henvisning til person}
-%\todo[inline,color=yellow! 100]{person, mangler ydereligere oplysninger}
-%\todo[inline,color=blue! 50]{feedback}
-%\todo[inline,color=gray! 100]{diverse}
+%\todo[author=?????,inline,color=red! 100]{grammatik}
+%\todo[author=?????,inline,color=green! 100]{hjælp, henvisning til person}
+%\todo[author=?????,inline,color=yellow! 100]{person, mangler ydereligere oplysninger}
+%\todo[author=?????,inline,color=blue! 50]{feedback}
+%\todo[author=?????,inline,color=gray! 100]{diverse}
 
 %%%%%%%%%%%% LIGNINGER %%%%%%%%%%%%
 % Notation: 1.000,5
