Så blev figuren lavet.

--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -1,4 +1,5 @@
 \section{Problemformulering}
+\label{sec:problem}
 Tracking af en lerdue i English Skeet \todo[inline, author=Anders]{eventuelt starte med en liste over forkortelser}(ES) vha. PTS. 
 Lerduen er i vores opstilling udskiftet med en bold, men ellers følges reglerne for ES.
 \todo[color=yellow! 100, inline, author=Anders]{Henvisning til litteraturliste eller fodnote}
@@ -49,11 +50,11 @@ PTS placering i punktet B.
 
 \begin{figure}[!th]
 \centering
-\begin{tikzpicture}[scale=1]
+\begin{tikzpicture}[scale=0.2]
 \include*{./graphics/parabola_in_xy_plane}
 \end{tikzpicture}
 \caption[tekst i indholdsfortegnelsen]{figurtekst}
 \label{fig:para_in_xy_plane}
 \end{figure}
 
-\todo[inline, author=Anders]{Jeg er gået igang med at tegne den og den kommer in snart.}
+\todo[author=Anders,inline,color=blue! 50]{Michael, jeg er usikker på, hvad akserne hedder.}
