--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -22,20 +22,14 @@
 \include{./content/forord}
 \include{./content/indledning}
 \include{./content/problemformulering}
-%%%%%%%%%%%% PART 1 %%%%%%%%%%%%
-
-%%%%%%%%%%%% PART 2 %%%%%%%%%%%%
-
-%%%%%%%%%%%% PART 3 %%%%%%%%%%%%
+%%%%%%%%%%%% Sektioner %%%%%%%%%%%%
+\include{./content/PTS}
 
 
 
 
 %%%%%%%%%%%% Litteratur %%%%%%%%%%%%
-
-
 \bibliography{litteraturliste}
-
 %%%%%%%%%%%% Appendix %%%%%%%%%%%%
 \newpage
 \appendices
