Tilføjet gensymb til preamble
Gensymb tilføjer \degree kommandoen til matmode.

--- a/Rapport/content/preamble.tex
+++ b/Rapport/content/preamble.tex
@@ -91,6 +91,8 @@ stringstyle=\color{red}
  pdfpagelabels,
  unicode]{hyperref}
  
+\usepackage{gensymb} % Tilføjer et grader-tegn i mat-mode
+
 \newenvironment{changemargin}[2]{%
 \begin{list}{}{%
 \setlength{\topsep}{0pt}%
