Hint til Micahel

--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -168,4 +168,6 @@ Pos(t) = \left( \begin{array}{c}
 \label{eq:pf:vektorparabel3d}
 \end{eqnarray}
 
+\todo[author=Anders,inline,color=blue! 50]{Michael, hvis du bruger align og spilt (tjek hvordan jeg har gjort i kap 4) kan du lave udregningen ud hver ny linje få et nyt ligningsnummer. :)}
+
 Bemærk udgangspunktet for kastet er flyttet fra origo, til HHs position. (Punkt D på figur \ref{fig:para_in_xy_plane})
