--- a/Rapport/litteraturliste.bib
+++ b/Rapport/litteraturliste.bib
@@ -28,3 +28,36 @@ edition    ={12},publisher = {Pearson Education},address={New Jersey},}
 year        ={2011},
 title          ={Fundamentals of Physics Extended},
 edition    ={9},publisher = {John Wiley & Sons, Inc},address={Cleveland},}
+
+
+@ONLINE{alu_profil_desitet,
+author = {Bosch-Rexroth-Coperation},
+title = {Basic Mechanic Elements 13.0 Catalog},
+month = feb,
+year = {2013},
+url = {http://www.boschrexroth.com/country_units/america/united_states/sub_websites/brus_dcl/Products/Aluminum_Structural_Framing/a_catalog/mge_catalog_download/3842540392_2013_02_EN_MGE13.pdf}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
