Redigeret tabel tekst.

--- a/Rapport/content/ansvarsomraader.tex
+++ b/Rapport/content/ansvarsomraader.tex
@@ -39,6 +39,6 @@ Nikolaj&\\
 Anders&\\
 &\\
 \end{tabular}     
-\caption[Ansvarsområder]{Viser fordelingen af ansvarsområder.}            
+\caption*{Viser fordelingen af ansvarsområder.}            
 \end{table}\\~\\ 
 Det skal understreges, at tabellen er vejledende og at hele gruppen har været med over alle områder.
