Tilføjet sektions henvisning til tabeller.

--- a/Rapport/content/preamble.tex
+++ b/Rapport/content/preamble.tex
@@ -30,6 +30,7 @@
 
 \usepackage{chngcntr}
 \counterwithin{figure}{section}
+\counterwithin{table}{section}
 
 %%%%%%% FIGURES %%%%%%%
 \usetikzlibrary{positioning} % in the preamble
