--- a/Rapport/litteraturliste.bib
+++ b/Rapport/litteraturliste.bib
@@ -24,10 +24,11 @@ year        ={2010},
 title          ={Modern Control Systems},
 edition    ={12},publisher = {Pearson Education},address={New Jersey},}
 
-@Book{fundamentals_of_physics,author     = {Halliday, D. and Resnick, R. and Walker, J.},
+
+@Book{fund_of_physics,author     = {Halliday, D. and Resnick, R. and Walker, J.},
 year        ={2011},
 title          ={Fundamentals of Physics Extended},
-edition    ={9},publisher = {John Wiley & Sons, Inc},address={Cleveland},}
+edition    ={9},publisher = {John Wiley \& Sons, Inc},address={Cleveland},}
 
 
 @ONLINE{alu_profil_desitet,
@@ -39,6 +40,13 @@ url = {http://www.boschrexroth.com/country_units/america/united_states/sub_websi
 }
 
 
+@ONLINE{ES_regler,
+author = {ISSF},
+title = {Official Statutes Rules and Regulations, Edition 2013},
+month = jan,
+year = {2014},
+url = {http://www.issf-sports.org/documents/rules/2013/ISSFRuleBook2013-2ndPrint-ENG.zip}
+}
 
 
 
