--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -326,7 +326,7 @@ kan ligning \ref{eq:Vm_transient1} omskrives til ligning \ref{eq:Vm_nocurrent}.
 I dette forsøg fastgøres en masse til rotoren med en snor.
 Massen lades falde til jorden med tyngdeaccelerationen.
 Rotoren vil accelerere med vinkelaccelerationen $\alpha_{op}$.
-Jf. Newtons 2. lov vil det resulterende kraftmoment være givet ved ligning \ref{eq:Tres}.
+Jf. Newtons 2. lov vil det resulterende kraftmoment være givet ved ligning \ref{eq:Tres0}.
 \begin{equation}
 	T_{res}=J_m\cdot\alpha_{op}
 	\label{eq:Tres0}
