Rettelse af litteratur

--- a/Rapport/litteraturliste.bib
+++ b/Rapport/litteraturliste.bib
@@ -32,7 +32,7 @@ edition    ={9},publisher = {John Wiley \& Sons, Inc},address={Cleveland},}
 
 
 @ONLINE{alu_profil_desitet,
-author = {Bosch-Rexroth-Coperation},
+author = {{Bosch Rexroth Coperation}},
 title = {Basic Mechanic Elements 13.0 Catalog},
 month = feb,
 year = {2013},
